--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     align-items: center;
     height: 100vh;
     width: 100vw;
+    font-family: 'Open Sans', sans-serif;
 }
 
 .strona{
@@ -76,6 +77,7 @@ fieldset{
 }
 
 .komp{
+    margin-top: 1rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -127,3 +129,49 @@ select{
     background-image: linear-gradient(to right,#D5B39A, #966A5A);;
 }
 
+.bud{
+    background-color:#D5B39A;
+    border-style: solid;
+    border-radius: 1rem;
+    border-color: #A17765;
+    width: 20rem;
+    margin: 1rem;
+}
+
+.zasto{
+    border-radius: 1rem;
+    background-color: #6C3A2F;
+    display: flex;
+    width: 4rem;
+    height:8rem;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    margin-bottom: 1rem;
+}
+
+.zasto label {
+    display: flex;
+    color: #EACCAF;
+    justify-content: left;
+    align-items: center;
+    border-top-left-radius:1rem ;
+    border-bottom-left-radius:1rem ;
+    width: 5rem;
+    height: 0.8rem;
+}
+
+.usl{
+    display: flex;
+    flex-wrap: wrap;
+    width: 27.5rem;
+    height: 20rem;
+    justify-content: center;
+    align-items: center;
+    background-color: ;
+}
+
+.usl label {
+    background-color: white;
+    width: 20rem;
+}
