--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ legend{
     border-radius: 1rem;
     background-color: #A17765;
 }
+
 .main{
     background-color: #420905;
     width: 60rem;
@@ -41,14 +42,15 @@ legend{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 .prawo{
-    background-color: blueviolet;
     height: 49rem;
     width: 29rem;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    align-items: center;
 }
 fieldset{
     text-align: center;
@@ -126,6 +128,8 @@ fieldset{
 .labelin{
     height: 100%;
     width: 50%;
+    display: flex;
+    justify-content: center;
 }
 select{
     text-align: center;
@@ -134,14 +138,44 @@ select{
     width: 50%;
     background-image: linear-gradient(to right,#D5B39A, #966A5A);;
 }
+.pra{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 25rem;
+    flex-wrap: wrap;
+    margin-top: 1.3rem;
+    height: 42.5rem;
+    border-style: none;
+    background-color: gold;
+}
 
+.budza{
+    width: 27rem;
+    height: 10rem;
+    display: flex;
+
+}
+.zabu{
+    width: 9rem;
+    height: 100%;
+}
+.buza{
+    width: fill;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+}
 .bud{
     background-color:#D5B39A;
     border-style: solid;
     border-radius: 1rem;
+    display: flex;
+    justify-content: center;
     border-color: #A17765;
-    width: 20rem;
-    margin: 1rem;
+    width: 10rem;
+    
+    
 }
 
 .zasto{
